spelling mistakes changed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <img src="images/logo.png" alt="We image can't load">
         </td>
         <td>
-          <td><p><em><h1>We made this for You</h1> <br><h2>This is  one of the best startup in Karur.The company is created by <b><i>Vishnu</i></b> and <b><i>Revanth Kumar</i></b> thesetwo fellows work very hard in day and night to reach the company to the lovable coustemers of this company.</h2></em></p>
+          <td><p><em><h1>We made this for You</h1> <br><h2>This is  one of the best startup in Karur.The company is created by <b><i>Vishnu</i></b> and <b><i>Revanth Kumar</i></b> these two fellows work very hard in day and night to reach the company to the lovable custemers of this company.</h2></em></p>
         </td>
       </tr>
     </table>
